--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,6 @@
+browser.reload.on.save=true
+code.analysis.excludes=
+ignore.path=
 include.path=${php.global.include.path}
 php.version=PHP_53
 source.encoding=UTF-8
